--- a/assets/css/formalize.css
+++ b/assets/css/formalize.css
@@ -54,9 +54,9 @@ input,
 button,
 select,
 textarea {
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding;
-  background-clip: padding-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
   margin: 0;
   vertical-align: middle;
 }
@@ -68,6 +68,9 @@ input[type="button"] {
   -webkit-appearance: none;
   -moz-border-radius: 11px;
   -webkit-border-radius: 11px;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding;
+  background-clip: padding-box;
   border-radius: 11px;
   background: #ddd url(../images/button.png) repeat-x;
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #fff), color-stop(1, #ddd));
@@ -113,9 +116,9 @@ input[type="week"] {
   -moz-border-radius: 0;
   -webkit-border-radius: 0;
   border-radius: 0;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding;
+  background-clip: padding-box;
   background-color: #fff;
   border: 1px solid;
   border-color: #848484 #c1c1c1 #e1e1e1;
